--- a/package.json
+++ b/package.json
@@ -3,11 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tensorflow-models/coco-ssd": "^2.2.3",
+    "@tensorflow/tfjs": "^4.22.0",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "file-saver": "^2.0.5",
+    "konva": "^9.3.16",
+    "opencv.js": "^1.2.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-image-crop": "^11.0.7",
+    "react-konva": "^19.0.1",
     "react-scripts": "5.0.1",
+    "use-image": "^1.1.1",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
